fix: bug 1574 - overlapped status text
Rework margins to avoid overlapping status text

--- a/src/components/modals/TeachSessionAdmin.css
+++ b/src/components/modals/TeachSessionAdmin.css
@@ -17,3 +17,6 @@
 .cl-dialog-admin .cl-ux-flex {
     margin-bottom:-25px;
 }
+.cl-wc-message--train {
+    margin-top:18px;
+}
